--- a/views/admin-lte/cm-admin/tabs.ejs
+++ b/views/admin-lte/cm-admin/tabs.ejs
@@ -21,6 +21,7 @@
                         <th>Activate</th>
                     </tr>
                     <tr ng-repeat="tab in tabs">
+                        <td>{{tab.orderNo}}</td>
                         <td>
                             {{tab.location}}
                         </td>
