--- a/views/admin-lte/catalogs/courseDetailModals.ejs
+++ b/views/admin-lte/catalogs/courseDetailModals.ejs
@@ -26,6 +26,6 @@
 <div class="row">
     <div class="modal" id="configView" tabindex="-1" role="dialog"
          aria-labelledby="config view" aria-hidden="true">
-         <% include courseConfigModal %>
+        <div ng-include="'/course/config/' + course._id"></div>
     </div>
 </div>
