Widget - Add Sort capability to PDF history table widget (based on name and data)

--- a/views/my-course/pdf-status.ejs
+++ b/views/my-course/pdf-status.ejs
@@ -3,17 +3,29 @@
         <tbody>
         <tr>
             <th style="width:10px;">Nr.</th>
-            <th>Your Last PDF History</th>
-            <th>Last Page Accessed</th>
-            <th>Date Accessed</th>
+            <th>
+                <a href="#" ng-click="sortType = 'nodeId.name'; sortReverse = !sortReverse">
+                    PDF Name
+                    <i ng-show="sortType == 'nodeId.name' && !sortReverse" class="fa fa-caret-down"></i>
+                    <i ng-show="sortType == 'nodeId.name' && sortReverse" class="fa fa-caret-up"></i>
+                </a>
+            </th>
+            <th>
+                <a href="#" ng-click="sortType = 'dateUpdated'; sortReverse = !sortReverse">
+                    Date Accessed
+                    <i ng-show="sortType == 'dateUpdated' && !sortReverse" class="fa fa-caret-down"></i>
+                    <i ng-show="sortType == 'dateUpdated' && sortReverse" class="fa fa-caret-up"></i>
+                </a>
+            </th>
+            <th>Last Page</th>
             <th>Total Page</th>
             <th>Percentage Finished</th>
         </tr>
-        <tr ng-repeat="pdf in pdfHistory | orderBy: '-courseId.dateAdded'">
+        <tr ng-repeat="pdf in pdfHistory | orderBy:sortType:sortReverse">
             <td>{{$index+1}}.</td>
             <td><a href="/course/{{pdf.courseId.slug}}/#/cid/{{pdf.courseId._id}}/nid/{{pdf.nodeId._id}}?slidePage={{pdf.pageNumber}}">{{pdf.nodeId.name}}</a></td>
-            <td>{{pdf.pageNumber}}</td>
             <td>{{pdf.dateUpdated | relativeDate}}</td>
+            <td>{{pdf.pageNumber}}</td>
             <td>{{pdf.totalPage}}</td>
             <td>{{((pdf.pageNumber/pdf.totalPage)*100).toFixed(2)}}%</td>
         </tr>
