display tabs from db

--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -1,7 +1,7 @@
 <section class="content-header">
     <ol class="breadcrumb">
         <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="/courses/#/category/{{course.category.slug}}%>"> </i> {{course.category.name}}</a></li>
+        <li><a href="/courses/#/category/{{course.category.slug}}"> </i> {{course.category.name}}</a></li>
         <li class="active"><a href="#/cid/{{course._id}}?tab=preview">{{course.name}}</a></li>
     </ol>
 </section>
