--- a/views/admin-lte/catalogs/courseDetailLeftTab.ejs
+++ b/views/admin-lte/catalogs/courseDetailLeftTab.ejs
@@ -1,59 +1,51 @@
 <ul class="nav nav-tabs tabs-hide hidden-xs hidden-sm">
-    <li class="active">
-        <a href="#/cid/{{course._id}}?tab=preview"
-           data-toggle="tab" data-target="#preview"
-                >
-            <i class="ionicons ion-ios-home-outline"></i><br>
-            <span>Preview</span></a></li>
+    <% for(var i = 0; i < tabs.length; i++){
+    var ta = _.findWhere(tabsActive, {_id: tabs[i]._id});
+        if (ta && !ta.isActive) {
+            continue;
+        }
+    %>
 
-    <li ng-show="isEnrolled || isOwner || isManager">
-        <a href="#/cid/{{course._id}}?tab=map"
-           data-toggle="tab" data-target="#map"
-                >
-            <i class="ionicons ion-map"></i>
-            <span>CourseMap</span></a></li>
+    <li
+            <% if(tabs[i].ngShow && tabs[i].ngShow != ''){ %>
+            ng-show="<%= tabs[i].ngShow %>"
+            <% } %>
+    >
+        <a href="#/cid/{{course._id}}?tab=<%= tabs[i].name %>"
+           data-toggle="tab" data-target="#<%= tabs[i].name %>">
+            <i class="<%= tabs[i].icon %>"></i><br>
+            <span><%= tabs[i].displayName %></span>
+        </a>
+    </li>
 
-    <li ng-show="isEnrolled || isOwner || isManager">
-        <a href="#/cid/{{course._id}}?tab=discussion" ng-show="user"
-           data-toggle="tab" data-target="#discussion"
-                >
-            <i class="ionicons ion-ios-chatboxes-outline"></i><br>
-            <span>Discussion</span></a></li>
-
-    <li ng-show="isEnrolled || isOwner || isManager">
-        <a href="#/cid/{{course._id}}?tab=analytics" ng-show="user"
-           data-toggle="tab" data-target="#analytics"
-                >
-            <i class="ionicons ion-stats-bars"></i><br>
-            <span>Analytics</span></a></li>
+    <%
+    }
+    %>
 </ul>
 
 <ul class="nav nav-tabs tabs-hide visible-xs visible-sm draw-tab ">
-    <li class="active">
-        <a href="#/cid/{{course._id}}?tab=preview"
-           data-toggle="tab" data-target="#preview"
-           onclick="hideTabMenu()" >
-            <i class="ionicons ion-ios-home-outline"></i><br>
-            <span>Preview</span></a></li>
+    <% for(var i = 0; i < tabs.length; i++){
+        var ta = _.findWhere(tabsActive, {_id: tabs[i]._id});
+        if (ta && !ta.isActive) {
+            continue;
+        }
+    %>
 
-    <li ng-show="isEnrolled || isOwner || isManager">
-        <a href="#/cid/{{course._id}}?tab=map"
-           data-toggle="tab" data-target="#map"
-           onclick="hideTabMenu()" >
-            <i class="ionicons ion-map"></i>
-            <span>CourseMap</span></a></li>
+    <li
+            <% if(tabs[i].ngShow && tabs[i].ngShow != ''){ %>
+            ng-show="<%= tabs[i].ngShow %>"
+            <% } %>
+    >
+        <a href="#/cid/{{course._id}}?tab=<%= tabs[i].name %>"
+           data-toggle="tab" data-target="#<%= tabs[i].name %>"
+           onclick="hideTabMenu()">
+            <i class="<%= tabs[i].icon %>"></i><br>
+            <span><%= tabs[i].displayName %></span>
+        </a>
+    </li>
 
-    <li ng-show="isEnrolled || isOwner || isManager">
-        <a href="#/cid/{{course._id}}?tab=discussion" ng-show="user"
-           data-toggle="tab" data-target="#discussion"
-           onclick="hideTabMenu()" >
-            <i class="ionicons ionicons ion-ios-chatboxes-outline"></i><br>
-            <span>Discussion</span></a></li>
+    <%
+    }
+    %>
 
-    <li ng-show="isEnrolled || isOwner || isManager">
-        <a href="#/cid/{{course._id}}?tab=analytics" ng-show="user"
-           data-toggle="tab" data-target="#analytics"
-           onclick="hideTabMenu()" >
-            <i class="ionicons ion-stats-bars"></i><br>
-            <span>Analytics</span></a></li>
 </ul>
