--- a/views/admin-lte/catalogs/courseDetailLeftTab.ejs
+++ b/views/admin-lte/catalogs/courseDetailLeftTab.ejs
@@ -1,55 +1,36 @@
 <ul class="nav nav-tabs tabs-hide hidden-xs hidden-sm">
-    <% for(var i = 0; i < tabs.length; i++){
-        var isActive = tabs[i].isActive;
-        if (typeof(tabsActive[tabs[i].name]) != "undefined") {
-            isActive = tabsActive[tabs[i].name];
-        }
-
-        if (!isActive) {
-            continue;
-        }
-    %>
-
+    <% for(var i = 0; i < activeTabs.length; i++){ %>
     <li
-            <% if(tabs[i].ngShow && tabs[i].ngShow != ''){ %>
-            ng-show="<%= tabs[i].ngShow %>"
+            <% if(activeTabs[i].ngShow && activeTabs[i].ngShow != ''){ %>
+            ng-show="<%= activeTabs[i].ngShow %>"
             <% } %>
     >
-        <a href="#/cid/{{course._id}}?tab=<%= tabs[i].name %>"
-           data-toggle="tab" data-target="#<%= tabs[i].name %>">
-            <i class="<%= tabs[i].icon %>"></i><br>
-            <span><%= tabs[i].displayName %></span>
+        <a href="#/cid/{{course._id}}?tab=<%= activeTabs[i].name %>"
+           data-toggle="tab" data-target="#<%= activeTabs[i].name %>">
+            <i class="<%= activeTabs[i].icon %>"></i><br>
+            <span><%= activeTabs[i].displayName %></span>
         </a>
     </li>
-
     <%
     }
     %>
 </ul>
 
 <ul class="nav nav-tabs tabs-hide visible-xs visible-sm draw-tab ">
-    <% for(var i = 0; i < tabs.length; i++){
-        var ta = _.findWhere(tabsActive, {_id: tabs[i]._id});
-        if (ta && !ta.isActive) {
-            continue;
-        }
-    %>
-
+    <% for(var i = 0; i < activeTabs.length; i++){ %>
     <li
-            <% if(tabs[i].ngShow && tabs[i].ngShow != ''){ %>
-            ng-show="<%= tabs[i].ngShow %>"
+            <% if(activeTabs[i].ngShow && activeTabs[i].ngShow != ''){ %>
+            ng-show="<%= activeTabs[i].ngShow %>"
             <% } %>
     >
-        <a href="#/cid/{{course._id}}?tab=<%= tabs[i].name %>"
-           data-toggle="tab" data-target="#<%= tabs[i].name %>"
+        <a href="#/cid/{{course._id}}?tab=<%= activeTabs[i].name %>"
+           data-toggle="tab" data-target="#<%= activeTabs[i].name %>"
            onclick="hideTabMenu()">
-            <i class="<%= tabs[i].icon %>"></i><br>
-            <span><%= tabs[i].displayName %></span>
+            <i class="<%= activeTabs[i].icon %>"></i><br>
+            <span><%= activeTabs[i].displayName %></span>
         </a>
     </li>
-
     <%
     }
     %>
-
 </ul>
