--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -50,6 +50,13 @@
 <script src="/slide-viewer/js/autosize.input.min.js"></script>
 <script src="/slide-viewer/js/jquery.simplecolorpicker.js"></script>
 <script src="/slide-viewer/js/drawdiv.js"></script>
-<!--<script src="/slide-viewer/js/tinycolor-0.9.15.min.js"></script>-->
-<!--<script src="/slide-viewer/js/pick-a-color-1.2.3.min.js"></script>-->
 <% } %>
+<% if (typeof(activeTabs) != "undefined" && activeTabs.length > 0) {
+    for (var i = 0; i < activeTabs.length; i++) {
+        if (activeTabs[i].hasJsFiles) {
+            %>
+            <%- include('../../tabs/' + activeTabs[i].name + '/' + activeTabs[i].name + 'Footer.ejs')%>
+            <%
+        }
+    }
+} %>
