can dynamically load actionbar

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -55,7 +55,7 @@
     for (var i = 0; i < activeTabs.length; i++) {
         if (activeTabs[i].hasJsFiles) {
             %>
-            <%- include('../../tabs/' + activeTabs[i].name + '/' + activeTabs[i].name + 'Footer.ejs')%>
+            <%- include('../course/' + activeTabs[i].name + '/' + activeTabs[i].name + 'Footer.ejs')%>
             <%
         }
     }
