--- a/views/admin-lte/catalogs/courseConfigModal.ejs
+++ b/views/admin-lte/catalogs/courseConfigModal.ejs
@@ -77,12 +77,22 @@
 
                                 <div class="form-group">
                                     <div class="checkbox">
-                                        <label ng-init="settings.disableControls = <%= course.settings['disableControls'] %>">
+                                        <%
+                                            var dc = false;
+                                            var dt = false;
+                                            if(course.settings && course.settings['disableControls'] !== undefined){
+                                                dc = course.settings['disableControls'];
+                                            }
+                                            if(course.settings && course.settings['disableTop'] !== undefined){
+                                                dt = course.settings['disableTop'];
+                                            }
+                                          %>
+                                        <label ng-init="settings.disableControls = <%= dc %>">
                                             <input type="checkbox" name="disableControl"
                                                    ng-model="settings.disableControls"> Disable Controls</label>
                                     </div>
                                     <div class="checkbox">
-                                        <label ng-init="settings.disableTop = <%= course.settings['disableTop'] %>">
+                                        <label ng-init="settings.disableTop = <%= dt %>">
                                             <input type="checkbox" name="disableTop" ng-model="settings.disableTop">
                                             Disable Top
                                             Navigations</label>
