--- a/views/admin-lte/course/discussion/discussionActionBar.ejs
+++ b/views/admin-lte/course/discussion/discussionActionBar.ejs
@@ -1,5 +1,5 @@
 <ul ng-controller="ActionBarController">
-    <li ng-show="isEnrolled || isOwner">
+    <li ng-show="isEnrolled || isOwner || isManager || isAdmin">
         <a style="cursor: pointer;"
            data-toggle="modal" data-target="#addNewTopicModal"
            title="Add New Topic">
