--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -455,12 +455,11 @@ li.disabled i {
     border-radius: 50%;
     background-color:#3C8DBC ;
     padding:0px;
-
-    text-indent: 100%;
+    /*text-indent: 100%;
+    overflow: hidden;*/
     white-space: nowrap;
-    overflow: hidden;
-
     z-index:0;
+    color:transparent;
 }
 .box.box-primary.dropdown-menu {
     width: auto;
