Changed "Annotation-Zones" to "Annotation Zones" Fixed a bug related to annotation zones not being correctly initialized Changed "Draw annotation zone" buttons functionality, to automatically show annotation zones

--- a/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
@@ -10,7 +10,7 @@
     <div id="slideNavigation" class="row notSelectable" ng-cloak>
         <div class="col-md-5 text-center">
           <div class="col-md-12 text-center" class="annoZonesTriggerClass" id="annoZonesTriggersId" ng-click="switchShowAnnotationZone()">
-            Annotation-Zones: {{$root.switchShowAnnoZones}}
+            Annotation Zones: {{$root.switchShowAnnoZones}}
           </div>
 
 
