--- a/views/admin-lte/course/preview/previewActionBar.ejs
+++ b/views/admin-lte/course/preview/previewActionBar.ejs
@@ -26,7 +26,7 @@
     <li ng-show="isOwner">
         <a style="cursor: pointer"
            data-toggle="modal" data-target="#configView"
-           title="Edit this course's details">
+           title="Edit this course's settings">
             <i class="ionicons ion-gear-a"></i> &nbsp; SETTINGS</a>
     </li>
     <li ng-show="isOwner || isManager">
