--- a/views/admin-lte/catalogs/nodeConfigModal.ejs
+++ b/views/admin-lte/catalogs/nodeConfigModal.ejs
@@ -2,9 +2,9 @@
 <section class="content">
     <div class="row row-centered">
         <div class="col-xs-12 col-md-5 col-centered">
-            <div class="box no-border" ng-controller="CourseConfigController" ng-init="init()">
+            <div class="box no-border" ng-controller="NodeConfigController" ng-init="init()">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Course Configuration: {{courseEdit.name}}</h3>
+                    <h3 class="box-title">Content Node Configuration: {{nodeEdit.name}}</h3>
 
                     <div class="box-tools pull-right">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
@@ -13,38 +13,9 @@
                 </div>
 
                 <div class="box-body no-border">
-                    <form role="form" ng-submit="saveCourseSetting(configCourseForm.$valid)" name="configCourseForm"
+                    <form role="form" ng-submit="saveNodeSetting(configNodeForm.$valid)" name="configNodeForm"
                           novalidate>
                         <fieldset>
-                            <div class="control-group addCourseManagers">
-                                <label class="control-label" for="description">Add Course Managers</label>
-
-                                <p class="help-block">Course Manager can act as a Course Creator.
-                                    a user with this privilege can edit or delete
-                                    contents that have been added into this course
-                                </p>
-
-                                <div class="input-group input-group-sm">
-                                    <input type="text" class="form-control" placeholder="username" ng-model="username"
-                                           id="usernameSearchBox">
-                                    <span class="input-group-btn">
-                                      <button class="btn btn-info btn-flat" type="button" ng-click="findUsername()">
-                                          <i class="ionicons ion-plus"></i>
-                                          <spinner show="isLoading"></spinner>
-                                      </button>
-                                    </span>
-                                </div>
-                                <br>
-                                <error-block ng-show="errors.length > 0" messages="errors"></error-block>
-                                <div class="controls">
-                                    <tags-input id="managerTagForm"
-                                                ng-model="managersRaw" placeholder="Course Managers" readonly="readonly"
-                                                on-tag-removed="removeUsername($tag)">
-                                    </tags-input>
-                                </div>
-                            </div>
-                            <br>
-
                             <div class="control-group">
                                 <label class="control-label">Tabs Settings</label>
 
@@ -78,15 +49,15 @@
                                 <div class="form-group">
                                     <div class="checkbox">
                                         <%
-                                            var dc = false;
-                                            var dt = false;
-                                            if(course.settings && course.settings['disableControls'] !== undefined){
-                                                dc = course.settings['disableControls'];
-                                            }
-                                            if(course.settings && course.settings['disableTop'] !== undefined){
-                                                dt = course.settings['disableTop'];
-                                            }
-                                          %>
+                                        var dc = false;
+                                        var dt = false;
+                                        if (course.settings && course.settings['disableControls'] !== undefined) {
+                                            dc = course.settings['disableControls'];
+                                        }
+                                        if (course.settings && course.settings['disableTop'] !== undefined) {
+                                            dt = course.settings['disableTop'];
+                                        }
+                                        %>
                                         <label ng-init="settings.disableControls = <%= dc %>">
                                             <input type="checkbox" name="disableControl"
                                                    ng-model="settings.disableControls"> Disable Controls</label>
@@ -107,7 +78,7 @@
                                     <!-- Button -->
                                     <div class="controls">
                                         <button class="btn btn-md btn-primary"
-                                                ng-click="configCourseForm.$pristine=false">Save Edit
+                                                ng-click="configNodeForm.$pristine=false">Save Edit
                                             <spinner show="isLoading"></spinner>
                                         </button>
 
@@ -122,7 +93,6 @@
                     </form>
                 </div>
             </div>
-            <!-- ./CourseEditController-->
         </div>
     </div>
 </section>
