--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -12,7 +12,11 @@
     </li>
     <!-- breadcrumb 2nd row -->
     <ol class="breadcrumb">
-        <li class="home"><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp; {{course.name}}</a></li>
+        <li class="home">
+            <a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp;
+                {{course.name}}
+            </a>
+        </li>
         <li><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a></li>
         <li><a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a></li>
         <li class="active">{{tabs[currentTab]}}</li>
@@ -20,15 +24,7 @@
     <!-- breadcrumb 2nd row -->
 
     <!-- ACTION BAR switches -->
-    <div class="navbar-custom-menu" ng-show="currentTab=='preview' || currentTab=='pdf' || currentTab=='video'" ng-include
-         src="'actionBar-node-preview'"></div>
-    <div class="navbar-custom-menu" ng-show="currentTab=='analytics'" ng-include
-         src="'actionBar-node-analytics'"></div>
-    <div class="navbar-custom-menu" ng-show="currentTab=='updates'" ng-include
-         src="'actionBar-node-updates'"></div>
-    <div class="navbar-custom-menu" ng-show="currentTab=='links'" ng-include
-         src="'actionBar-node-links'"></div>
-    <!-- ACTION BAR switches -->
+    <div class="navbar-custom-menu" ng-include="includeActionBar"></div>
 
 </section>
 
@@ -43,22 +39,11 @@
                 <!-- end tab menu -->
 
                 <div class="tab-content">
-                    <div class="tab-pane" id="video">
-                        <% include nodeDetailContentPreview %>
-                    </div>
-                    <div class="tab-pane" id="pdf">
-                        <% include nodeDetailContentPdf %>
-                    </div>
-                    <div class="tab-pane" id="updates">
-                        <% include nodeDetailContentUpdates %>
-                    </div>
-                    <div class="tab-pane" id="links">
-                        <% include ../links/links %>
-                    </div>
-                    <div class="tab-pane" id="analytics">
-                        <% include nodeDetailContentNodeAnalytics %>
+                    <div class="tab-pane active" ng-class="currentTab" id="tabContent">
+                        <div ng-include="include"></div>
                     </div>
                 </div>
+
             </div>
             <!-- /tabs -->
 
@@ -72,8 +57,6 @@
 <% include nodeDetailModal %>
 <!-- /.modal contents -->
 
-<% include actionBarNode %>
-
 <script>
     $(document).ready(function () {
         handleTab();
@@ -83,7 +66,7 @@
 
         //Get window height and the wrapper height
         var neg = $('.main-header').outerHeight() + $('.main-footer').outerHeight();
-        var neg2= $('.content-header').outerHeight();
+        var neg2 = $('.content-header').outerHeight();
         var window_height = $(window).height();
         //Set the min-height of the content and sidebar based on the
         //the height of the document.
