--- a/views/admin-lte/treeNode/video/video.ejs
+++ b/views/admin-lte/treeNode/video/video.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/jquery-ui/themes/black-tie/jquery-ui.css">
 <div class="container-fluid">
-    <div ng-show="isVideoExist">
+    <div ng-show="videoFile">
         <va-widget video-source="{{videoFile.link}}" video-id="{{videoFile._id}}"></va-widget>
     </div>
 </div>
