--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -1,4 +1,4 @@
-<div class="row ">
+<div class="row" ng-controller="PdfTabController">
 
     <div id="commentController" class="col-xs-11 container-fluid" ng-controller="CommentListController">
 
