fix controller widget node analytics

--- a/views/admin-lte/treeNode/nodeAnalytics/nodeAnalytics.ejs
+++ b/views/admin-lte/treeNode/nodeAnalytics/nodeAnalytics.ejs
@@ -1,7 +1,6 @@
 <!-- analytics-->
 <div id="node-analytics-widgets" class="grid-stack col-xs-12 col-md-3"
-     ng-controller="widgetController"
-     ng-init="location='node-analytics'">
+     ng-controller="widgetNodeAnalyticsController" >
 
     <div ng-show="!widgets || widgets.length == 0" class="empty-widget">
         There is no registered widget here.
