--- a/views/admin-lte/treeNode/video/video.ejs
+++ b/views/admin-lte/treeNode/video/video.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="/jquery-ui/themes/black-tie/jquery-ui.css">
-<div class="container-fluid">
+<div class="container-fluid" ng-controller="VideoTabController">
     <div ng-show="videoFile">
         <va-widget video-source="{{videoFile.link}}" video-id="{{videoFile._id}}"></va-widget>
     </div>
