--- a/views/admin-lte/catalogs/courseDetail.ejs
+++ b/views/admin-lte/catalogs/courseDetail.ejs
@@ -12,7 +12,7 @@
     </li>
     <ol class="breadcrumb">
         <li class="home"><a href="#/cid/{{course._id}}?tab=preview">{{course.name}}</a></li>
-        <li class="active tabName">{{currentTab}}</li>
+        <li class="active tabName">{{tabDisplayName}}</li>
     </ol>
 
     <div class="navbar-custom-menu" ng-include="includeActionBar"></div>
