--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -19,7 +19,7 @@
         </li>
         <li><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}">Map</a></li>
         <li><a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab={{defaultPath}}">{{treeNode.name}}</a></li>
-        <li class="active">{{currentTab}}</li>
+        <li class="active">{{tabDisplayName}}</li>
     </ol>
     <!-- breadcrumb 2nd row -->
 
