pdf pdfId rootscope set, init node properly

--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -5,7 +5,7 @@
         <div class="slide-container col-sm-7 col-md-7">
             <div id="viewerWrapper">
 
-                <pdf-viewer source="{{pdfFile.link}}" current-page-number="1"></pdf-viewer>
+                <pdf-viewer source="{{pdfFile.link}}" current-page-number="1" pdf-id="{{pdfFile._id}}"></pdf-viewer>
 
                 <div id="annotationZone">
                     <!--<div movable style="background-color:yellow;height:100px;width:100px;" ></div>-->
