--- a/views/admin-lte/treeNode/links/links.ejs
+++ b/views/admin-lte/treeNode/links/links.ejs
@@ -31,10 +31,12 @@
                                 <h4> {{bookmark.link.title}} </h4>
 
                                 <br class="clear">
+                                <br class="clear">
                                 <a class="btn btn-primary btn-xs open-new-tab" title="Open in a New Tab"
                                    href="{{bookmark.link.content}}" target="_blank">
-                                    <i class="fa fa-external-link"></i> Open in a new tab</a>
+                                    <i class="fa fa-external-link"></i> Open in a new tab</a> {{bookmark.link.content}}
                                 <br class="clear">
+
                                 <span class="posted-at">
                                     Posted <strong>{{bookmark.link.dateAdded | relativeDate}}</strong>
                                     By <strong>{{bookmark.createdBy.displayName}}</strong>
