fixes css problem with jquery ui

--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -18,6 +18,8 @@
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css"/>
     <link href="/admin-lte/css/skin-blue.min.css" rel="stylesheet" type="text/css"/>
     <link href="/admin-lte/css/app.css" rel="stylesheet" type="text/css"/>
+    <link href="/admin-lte/css/posts.css" rel="stylesheet" type="text/css"/>
+    <link href="/jquery-ui/themes/black-tie/jquery-ui.css" rel="stylesheet" type="text/css">
 
     <!-- <link href="/jquery/jsplumb.css" rel="stylesheet"> -->
 
@@ -26,7 +28,7 @@
     <link rel="stylesheet" type="text/css" href="/video-annotations/styles/styles.css"/>
 
     <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
-    <link rel="stylesheet" type="text/css" href="/angular-toastr/angular-toastr.min.css" />
+    <link rel="stylesheet" type="text/css" href="/angular-toastr/angular-toastr.min.css"/>
 
     <!-- Chart and related widget -->
     <link rel="stylesheet" type="text/css" href="/chartjs/angular-chart.min.css"/>
