--- a/views/admin-lte/treeNode/links/linksActionBar.ejs
+++ b/views/admin-lte/treeNode/links/linksActionBar.ejs
@@ -1,5 +1,5 @@
 <ul ng-controller="ActionBarController">
-    <li ng-show="enrolled || isOwner">
+    <li ng-show="enrolled || isOwner || isManager || isNodeOwner">
         <a style="cursor: pointer;"
            data-toggle="modal" data-target="#AddLinksModal"
            title="Add New Link">
