--- a/views/admin-lte/treeNode/pdf/pdfActionBar.ejs
+++ b/views/admin-lte/treeNode/pdf/pdfActionBar.ejs
@@ -2,14 +2,21 @@
     <li ng-show="isNodeOwner">
         You created this content node
     </li>
-    <li ng-show="isNodeOwner">
+    <li ng-show="isOwner">
+        You created the course
+    </li>
+    <li ng-show="isManager">
+        You are a manager
+    </li>
+
+    <li ng-show="isOwner || isManager || isNodeOwner">
         <a style="cursor: pointer"
            data-toggle="modal" data-target="#editContentNodeModal"
            title="Edit this content node">
             <i class="ionicons ion-edit"></i> &nbsp; EDIT</a>
     </li>
 
-    <li ng-show="isNodeOwner">
+    <li ng-show="isOwner || isManager || isNodeOwner">
         <a style="cursor: pointer"
            data-toggle="modal" data-target="#configView"
            title="Edit this node's settings">
