--- a/views/admin-lte/treeNode/links/links.ejs
+++ b/views/admin-lte/treeNode/links/links.ejs
@@ -19,26 +19,26 @@
 
                 <ul class="posts">
                     <li class="post cursor"
-                        ng-repeat="bookmark in links" ng-class="(pid==bookmark.link._id)?'active':''"
+                        ng-repeat="bookmark in links" ng-class="(pid==bookmark._id)?'active':''"
                         ng-hide="bookmark.isDeleted"
-                        ng-click="initiateLink(bookmark.link._id)"
+                        ng-click="initiateLink(bookmark._id)"
                     >
                         <div class="row">
                             <div class="col-xs-1">
-                                <voting vote-type="link" vote-type-id="{{bookmark.link._id}}" vote-value=""></voting>
+                                <voting vote-type="link" vote-type-id="{{bookmark._id}}" vote-value=""></voting>
                             </div>
                             <div class="col-xs-11">
-                                <h4> {{bookmark.link.title}} </h4>
+                                <h4> {{bookmark.title}} </h4>
 
                                 <br class="clear">
                                 <br class="clear">
                                 <a class="btn btn-primary btn-xs open-new-tab" title="Open in a New Tab"
-                                   href="{{bookmark.link.content}}" target="_blank">
-                                    <i class="fa fa-external-link"></i> Open in a new tab</a> {{bookmark.link.content}}
+                                   href="{{bookmark.content}}" target="_blank">
+                                    <i class="fa fa-external-link"></i> Open in a new tab</a> {{bookmark.content}}
                                 <br class="clear">
 
                                 <span class="posted-at">
-                                    Posted <strong>{{bookmark.link.dateAdded | relativeDate}}</strong>
+                                    Posted <strong>{{bookmark.dateAdded | relativeDate}}</strong>
                                     By <strong>{{bookmark.createdBy.displayName}}</strong>
                                 </span>
                             </div>
@@ -67,7 +67,6 @@
                 <div ng-show="currentLink" class="currentTopic">
                     <div class="box box-solid">
                         <div class="box-body">
-                            <!--<iframe ng-src="{{currentLinkUrl}}" class="link" frameborder="0"></iframe>-->
                         </div>
                     </div>
                 </div>
